# WorldCupBracketChallenge

./: .gitignore  README.md  api.py  pyproject.toml
app/: cumulative_scoring.py  knockout.py  knockout_2026.py  knockout_scoring.py  leaderboard.py  loader.py  main.py  models.py  scoring.py  service.py  standings.py  validator.py
config/: tournament.json
config/entries/: alice.json
config/truth/: woshisim.json
config/truthData/: woshisim.json
testing/: test_loader.py
web/: package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/entries/[entryId]/: page.tsx
web/app/pools/[poolId]/: page.tsx
web/app/pools/join/[inviteCode]/: page.tsx
web/app/register/: page.tsx
web/app/wc/entry/new/: page.tsx
web/app/workspace/: page.tsx
web/components/app/: AppHeader.tsx
web/components/entry/: EntryBuilder.tsx  EntryViewer.tsx  FlagIcon.tsx  GroupCard.tsx  KnockoutBracketPicker.tsx  MatchCard.tsx  SimulationResults.tsx  StandingsTable.tsx  TeamBadge.tsx
web/components/providers/: AppDataProvider.tsx
web/lib/: knockout.ts  standings.ts  team-metadata.ts  types.ts
