[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-bracket-challenge"
version = "0.1.0"
description = "World Cup pick'em and bracket challenge backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8"
]

[tool.setuptools]
packages = ["app"]